# pts

./: .gitignore  =2.5  =4.41  README.md  argument_quality_train.csv  attention_eval.sh  clean_small_evals.py  code_eval.sh  essay_eval.sh  essay_generate.sh  eval.sh  eval_ours.sh  generate_latents.sh  infer.sh  llama_arch.py  llama_class.py  math_eval.sh  merge_lora.py  pyproject.toml  requirements.txt  sft_trainer_class.py  test.py  test_dart_ours.py  test_he.py  train.sh
configs/: attention.yaml  default.yaml  dream_qwen.yaml  dual_pipeline.yaml  llada_llama.yaml
outputs/: run_1755262713.json
outputs_essay/diffusion-llm/: essay_evaluation_20250820_101905.json
outputs_essay/llm-diffusion/: essay_evaluation_20250819_115714.json
pts/: cli.py  constants.py
pts/eval/: WA_eval_arc_parallel.py  dart_levels.ipynb  eval_arc.py  eval_arc_parallel.py  eval_attention_parallel.py  eval_code_parallel.py  eval_essay_parallel.py  eval_math_parallel.py  eval_ours.py  eval_sat_parallel.py
pts/pipeline/: attention.py  orchestrator.py
pts/train/: generate_latents.py  train.py
src/: cli.py
src/pipeline/: config.py  orchestrator.py  utils.py
wandb/: latest-run
wandb/run-20250826_220401-gdkrv4ep/: run-gdkrv4ep.wandb
wandb/run-20250826_221758-6n8esoc8/: run-6n8esoc8.wandb
wandb/run-20250826_222029-g9heri6f/: run-g9heri6f.wandb
wandb/run-20250826_222310-w7r7g42b/: run-w7r7g42b.wandb
wandb/run-20250826_222416-3ybys3et/: run-3ybys3et.wandb
wandb/run-20250826_222625-r5xfy3ms/: run-r5xfy3ms.wandb
wandb/run-20250826_235350-3iojyca1/: run-3iojyca1.wandb
(+26 files in other folders)
